Fixed chat z-index property. It is now fully visible when opened.

--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -104,6 +104,7 @@ Chat Iteration No2
     -webkit-transition: .5s;
     transition: .5s;
     background-color: #f8f9fa;
+    z-index: 3000;
 }
 
 .padding {
